added runs on label-1

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,7 +2,9 @@ name: hello-world
 on: push
 jobs:
   my-job:
-    runs-on: ubuntu-latest
+    runs-on: 
+    - self-hosted
+    - label-1   
     steps:
       - name: my-step
         run: echo "Hello World!"
